# JsonDatabase

./: .gitignore  CMakeLists.txt  CMakeSettings.json  JsonDatabase.cmake  build.bat  dependencies.cmake
Examples/: ExampleMaster.cmake
Examples/DatabaseAsync/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Person.cpp  Person.h  UIPerson.cpp  UIPerson.h  UIPerson.ui  UIWrapper.h  main.cpp
Examples/DatabaseExample1/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  c.cpp  c.h  main.cpp
Examples/DatabaseJson/: main.cpp
Examples/DatabasePerformanceTest/: CMakeLists.txt  Person.h  main.cpp
Examples/DatabaseSandbox/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/inc/: FileChangeWatcher.h  FileLock.h  FileReadWriteLock.h  JDDeclaration.h  JDManager.h  JDObjectContainer.h  JDObjectInterface.h  JDObjectLocker.h  JDObjectRegistry.h  JDSerializable.h  JD_base.h  JD_debug.h  JD_global.h  JsonDatabase.h  JsonDatabase_Declaration.h  JsonDatabase_base.h  JsonDatabase_debug.h  JsonDatabase_global.h  JsonDatabase_info.h  Signal.h  ThreadWorker.h
core/inc/Json/: JsonDeserializer.h  JsonSerializer.h  JsonValue.h  QJsonValueInterface.h
core/inc/manager/: JDManager.h  JDManagerFileSystem.h  JDManagerObjectManager.h  JDManagerSignals.h  JDObjectLocker.h
core/inc/manager/async/: JDManagerAsyncWork.h  JDManagerAsyncWorker.h  WorkProgress.h
core/inc/manager/async/work/: JDManagerWorkLoadAllObjects.h  JDManagerWorkLoadSingleObject.h  JDManagerWorkSaveList.h  JDManagerWorkSaveSingle.h
core/inc/object/: JDObjectContainer.h  JDObjectID.h  JDObjectInterface.h  JDObjectManager.h  JDObjectRegistry.h  JDSerializable.h
core/inc/ui/: JDObjectListWidget.h  JDObjectLockDataWidget.h  JDUserListWidget.h  JDUserWidget.h
core/inc/utilities/: AsyncContextDrivenDeleter.h  ErrorCodes.h  JDObjectIDDomain.h  JDObjectItemModel.h  JDObjectModelDelegate.h  JDProfiler.h  JDSerializable.h  JDUniqueMutexLock.h  JDUser.h  JDUserRegistration.h  JDUtilities.h  JsonUtilities.h  QTEvents.h  ResourceManager.h  Signal.h  StringUtilities.h  SystemCommand.h  ThreadWorker.h
core/inc/utilities/filesystem/: AbstractRegistry.h  FileChangeWatcher.h  FileLock.h  FileReadWriteLock.h  LockedFileAccessor.h  StringZipper.h
core/resources/: JDIcons.qrc
core/src/: FileChangeWatcher.cpp  FileLock.cpp  FileReadWriteLock.cpp  JDManager.cpp  JDObjectContainer.cpp  JDObjectInterface.cpp  JDObjectLocker.cpp  JDObjectRegistry.cpp  JDSerializable.cpp  JDUniqueMutexLock.cpp  JsonDatabase_debug.cpp  JsonDatabase_info.cpp  ThreadWorker.cpp
core/src/Json/: JsonDeserializer.cpp  JsonSerializer.cpp  JsonValue.cpp  QJsonValueInterface.cpp
core/src/manager/: JDManager.cpp  JDManagerFileSystem.cpp  JDManagerObjectManager.cpp  JDManagerSignals.cpp  JDObjectLocker.cpp
core/src/manager/async/: JDManagerAsyncWork.cpp  JDManagerAsyncWorker.cpp  WorkProgress.cpp
core/src/manager/async/work/: JDManagerWorkLoadAllObjects.cpp  JDManagerWorkLoadSingleObject.cpp  JDManagerWorkSaveList.cpp  JDManagerWorkSaveSingle.cpp
core/src/object/: JDObjectContainer.cpp  JDObjectID.cpp  JDObjectInterface.cpp  JDObjectLocker.cpp  JDObjectManager.cpp  JDObjectRegistry.cpp  JDSerializable.cpp
core/src/ui/: JDObjectListWidget.cpp  JDObjectLockDataWidget.cpp  JDUserListWidget.cpp  JDUserWidget.cpp
core/src/utilities/: ErrorCodes.cpp  JDObjectIDDomain.cpp  JDObjectItemModel.cpp  JDObjectModelDelegate.cpp  JDProfiler.cpp  JDSerializable.cpp  JDUniqueMutexLock.cpp  JDUser.cpp  JDUserRegistration.cpp  JDUtilities.cpp  JsonUtilities.cpp  QTEvents.cpp  ResourceManager.cpp  StringUtilities.cpp  SystemCommand.cpp  ThreadWorker.cpp
core/src/utilities/filesystem/: AbstractRegistry.cpp  FileChangeWatcher.cpp  FileLock.cpp  FileReadWriteLock.cpp  LockedFileAccessor.cpp  StringZipper.cpp
unittests/UnitTest1/: Person.h  main.cpp  tests.h
unittests/UnitTest1/tests/: TST_readWrite.h  TST_stringUtilities.h
